force-app/main/default/objects/ADM_User_Preferences__c/ADM_User_Preferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores user preferences for the GUS application.</description>
    <label>User Preferences</label>
</CustomObject>