force-app/main/default/objects/ADM_User_Preferences__c/fields/BacklogHideWorkWithSprintToggle__c.field-meta.xml
<CustomField>
    <fullName>BacklogHideWorkWithSprintToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to determine whether work with a sprint is included in the Unified Walls Backlog Panel</description>
    <label>BacklogHideWorkWithSprintToggle</label>
    <type>Checkbox</type>
</CustomField>