force-app/main/default/objects/ADM_User_Preferences__c/fields/LaneScrolling__c.field-meta.xml
<CustomField>
    <fullName>LaneScrolling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to set User&#39;s preference on Kanban Lane scrolling</description>
    <label>LaneScrolling</label>
    <type>Checkbox</type>
</CustomField>