force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowBacklogviewonVirtualWall__c.field-meta.xml
<CustomField>
    <fullName>ShowBacklogviewonVirtualWall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user would like to display backlog view in the virtual wall.</description>
    <label>Show Backlog view on Virtual Wall</label>
    <type>Checkbox</type>
</CustomField>