force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowChatteronVirtualWall__c.field-meta.xml
<CustomField>
    <fullName>ShowChatteronVirtualWall__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the user will want to show or hide the chatter component on virtual wall.</description>
    <label>Show Chatter on Virtual Wall</label>
    <type>Checkbox</type>
</CustomField>