force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowColoredSubjects__c.field-meta.xml
<CustomField>
    <fullName>ShowColoredSubjects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Kanban Preference -  show colored subjects on the work card</description>
    <label>ShowColoredSubjects</label>
    <type>Checkbox</type>
</CustomField>