force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowDeleteTaskDialog__c.field-meta.xml
<CustomField>
    <fullName>ShowDeleteTaskDialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the &quot;Delete Task&quot; dialog on the Virtual Wall</description>
    <label>Show Delete Task Dialog</label>
    <type>Checkbox</type>
</CustomField>