force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowMoveTaskToCompletedDialog__c.field-meta.xml
<CustomField>
    <fullName>ShowMoveTaskToCompletedDialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the &quot;Move Task To Completed&quot; dialog on the Virtual Wall page.</description>
    <label>Show Move Task To Completed Dialog</label>
    <type>Checkbox</type>
</CustomField>