force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowMoveTaskToInProgressDialog__c.field-meta.xml
<CustomField>
    <fullName>ShowMoveTaskToInProgressDialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the &quot;Move Task To In Progress&quot; dialog on the Virtual Wall page.</description>
    <label>Show Move Task To In Progress Dialog</label>
    <type>Checkbox</type>
</CustomField>