force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowMoveUncompletedTasksDialog__c.field-meta.xml
<CustomField>
    <fullName>ShowMoveUncompletedTasksDialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the &quot;Move Uncompleted Tasks&quot; dialog when the Work is closed on the Virtual Wall page.</description>
    <label>Show Move Uncompleted Tasks Dialog</label>
    <type>Checkbox</type>
</CustomField>