force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowMoveWorkToOtherSprintDialog__c.field-meta.xml
<CustomField>
    <fullName>ShowMoveWorkToOtherSprintDialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the &quot;Move Work to Other Sprint Warning&quot; dialog on the Virtual Wall page.</description>
    <label>Show Move Work To Other Sprint Warning</label>
    <type>Checkbox</type>
</CustomField>