force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowNumberOfDaysInColumn__c.field-meta.xml
<CustomField>
    <fullName>ShowNumberOfDaysInColumn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference for showing number of days on Work card</description>
    <label>ShowNumberOfDaysInColumn</label>
    <type>Checkbox</type>
</CustomField>