force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowNumberOfPosts__c.field-meta.xml
<CustomField>
    <fullName>ShowNumberOfPosts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference -  show number of feed posts on work card</description>
    <label>ShowNumberOfPosts</label>
    <type>Checkbox</type>
</CustomField>