force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowNumberOfTasks__c.field-meta.xml
<CustomField>
    <fullName>ShowNumberOfTasks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference - to show number of Tasks</description>
    <label>ShowNumberOfTasks</label>
    <type>Checkbox</type>
</CustomField>