force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowPriority__c.field-meta.xml
<CustomField>
    <fullName>ShowPriority__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference  - Show Priority field on the Work card</description>
    <label>ShowPriority</label>
    <type>Checkbox</type>
</CustomField>