force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowProductTagAssignmentGuidedTour__c.field-meta.xml
<CustomField>
    <fullName>ShowProductTagAssignmentGuidedTour__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Shows the guided tour on the Product Tag Assignment Matrix.</description>
    <label>Show Product Tag Assignment Guided Tour</label>
    <type>Checkbox</type>
</CustomField>