force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowProductTagGuidedTour__c.field-meta.xml
<CustomField>
    <fullName>ShowProductTagGuidedTour__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the Guided Tour for the Product Tags on the Work edit page.</description>
    <label>Show Product Tag Guided Tour</label>
    <type>Checkbox</type>
</CustomField>