force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowQE__c.field-meta.xml
<CustomField>
    <fullName>ShowQE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Kanban Preference -  show QE on Work Card</description>
    <label>ShowQE</label>
    <type>Checkbox</type>
</CustomField>