force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowRecordTypeIcon__c.field-meta.xml
<CustomField>
    <fullName>ShowRecordTypeIcon__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference - Show RecordTypeIcon on work card</description>
    <label>ShowRecordTypeIcon</label>
    <type>Checkbox</type>
</CustomField>