force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowRemoveWorkFromSprintDialog__c.field-meta.xml
<CustomField>
    <fullName>ShowRemoveWorkFromSprintDialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the &quot;Remove Work From Sprint Warning&quot; dialog on the Virtual Wall page.</description>
    <label>Show Remove Work From Sprint Warning</label>
    <type>Checkbox</type>
</CustomField>