force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowScheduledBuild__c.field-meta.xml
<CustomField>
    <fullName>ShowScheduledBuild__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference -  show Scheduled build on work card</description>
    <label>ShowScheduledBuild</label>
    <type>Checkbox</type>
</CustomField>