force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowStoryPoints__c.field-meta.xml
<CustomField>
    <fullName>ShowStoryPoints__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference - show Story Points on the work card</description>
    <label>ShowStoryPoints</label>
    <type>Checkbox</type>
</CustomField>