force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowVirtualWallGuidedTour__c.field-meta.xml
<CustomField>
    <fullName>ShowVirtualWallGuidedTour__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to show the Guided Tour on the Virtual Wall page.</description>
    <label>Show Virtual Wall Guided Tour</label>
    <type>Checkbox</type>
</CustomField>