force-app/main/default/objects/ADM_User_Preferences__c/fields/ShowWorkID__c.field-meta.xml
<CustomField>
    <fullName>ShowWorkID__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference - show Work Id on the work card</description>
    <label>ShowWorkID</label>
    <type>Checkbox</type>
</CustomField>