force-app/main/default/objects/ADM_User_Preferences__c/fields/TabPanelViewPreference__c.field-meta.xml
<CustomField>
    <fullName>TabPanelViewPreference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unchecked (default) = Shows the tab panels with tabs. Checked = Show tab panels stacked on top of each other.</description>
    <label>Tab Panel View Preference</label>
    <type>Checkbox</type>
</CustomField>