force-app/main/default/objects/ADM_User_Preferences__c/fields/UseColorCoding__c.field-meta.xml
<CustomField>
    <fullName>UseColorCoding__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Kanban Preference</description>
    <label>UseColorCoding</label>
    <type>Checkbox</type>
</CustomField>