force-app/main/default/objects/ADM_User_Preferences__c/fields/WorkPanelViewPreference__c.field-meta.xml
<CustomField>
    <fullName>WorkPanelViewPreference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Work Panel</label>
    <type>Checkbox</type>
</CustomField>